--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
 APP_NAME="Sistem Absensi UAS"
 APP_ENV=production
-APP_KEY=
-APP_DEBUG=false
-APP_URL=https://absensi.fintproject.site
+APP_KEY=base64:WIggbIJjb8xkrj9zGDW7vQVrnrEn6Op3XHFU0MaoNpQ=
+APP_DEBUG=true
+APP_URL=https://absensi.fazcreateve.my.id
 
 APP_LOCALE=id
 APP_FALLBACK_LOCALE=en
@@ -15,17 +15,17 @@ BCRYPT_ROUNDS=12
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=error
+LOG_LEVEL=debug
 
 # Database Configuration untuk cPanel Shared Hosting
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=your_cpanel_database_name
-DB_USERNAME=your_cpanel_username
-DB_PASSWORD=your_cpanel_password
+DB_DATABASE=absensi
+DB_USERNAME=absensi_user
+DB_PASSWORD=
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -33,9 +33,9 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=sync
 
-CACHE_STORE=database
+CACHE_STORE=file
 
 MEMCACHED_HOST=127.0.0.1
 
